# houseBOT

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  히스토리.md
.github/workflows/: daily-summary.yml  light-check.yml
docs/superpowers/plans/: 2026-06-13-housebot-plan.md
docs/superpowers/specs/: 2026-06-13-housebot-design.md
scripts/: install-tasks.ps1  run_check.ps1  run_daily.ps1
src/: analyzer.py  config.py  models.py  naver_scraper.py  run_check.py  run_daily.py  sheets_store.py  telegram_notifier.py
tests/: conftest.py  test_analyzer.py  test_config.py  test_naver_fetch.py  test_naver_parse_listings.py  test_naver_parser.py  test_notifier_format.py  test_notifier_send.py  test_run_check.py  test_run_daily.py  test_sheets_store.py
tests/fixtures/: naver_complex_response.json
