[project]
name = "housebot"
version = "0.1.0"
description = "Daily Naver real estate listing tracker with Telegram alerts"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "gspread>=6.0.0",
    "google-auth>=2.28.0",
    "tenacity>=8.2.0",
    "playwright>=1.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "respx>=0.21.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
